Closed
Bug 1203430
Opened 10 years ago
Closed 10 years ago
Intermittent Main app process exited normally | application crashed [@ mozilla::net::PNeckoChild::SendHTMLDNSPrefetch(nsString const&, unsigned short const&)]
Categories
(Core :: Networking: DNS, defect)
Core
Networking: DNS
Tracking
()
RESOLVED
FIXED
mozilla46
People
(Reporter: cbook, Assigned: jduell.mcbugs)
References
()
Details
(Keywords: crash, intermittent-failure)
Attachments
(1 file)
|
3.28 KB,
patch
|
jdm
:
review+
ritu
:
approval-mozilla-aurora+
ritu
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
https://treeherder.mozilla.org/logviewer.html#?job_id=13828263&repo=mozilla-inbound
05:59:35 WARNING - PROCESS-CRASH | Main app process exited normally | application crashed [@ mozilla::net::PNeckoChild::SendHTMLDNSPrefetch(nsString const&, unsigned short const&)]
05:59:35 INFO - Crash dump filename: /tmp/tmpqkDgux.mozrunner/minidumps/014b31b3-0513-c519-0f726498-5edfbd50.dmp
05:59:35 INFO - Operating system: Linux
05:59:35 INFO - 0.0.0 Linux 3.2.0-76-generic-pae #111-Ubuntu SMP Tue Jan 13 22:34:29 UTC 2015 i686
05:59:35 INFO - CPU: x86
05:59:35 INFO - GenuineIntel family 6 model 62 stepping 4
05:59:35 INFO - 1 CPU
05:59:35 INFO - Crash reason: SIGSEGV
05:59:35 INFO - Crash address: 0x14
05:59:35 INFO - Process uptime: not available
05:59:35 INFO - Thread 0 (crashed)
05:59:35 INFO - 0 libxul.so!mozilla::net::PNeckoChild::SendHTMLDNSPrefetch(nsString const&, unsigned short const&) [PNecko.h:55d57fcbc791 : 843 + 0x12]
05:59:35 INFO - eip = 0xb2996822 esp = 0xbfbea598 ebp = 0xbfbea5e8 ebx = 0xb75a0200
05:59:35 INFO - esi = 0x00000000 edi = 0xa127ac60 eax = 0xb5592676 ecx = 0x00000000
05:59:35 INFO - edx = 0xa163c340 efl = 0x00010286
05:59:35 INFO - Found by: given as instruction pointer in context
05:59:35 INFO - 1 libxul.so!nsHTMLDNSPrefetch::nsDeferrals::SubmitQueue() [nsHTMLDNSPrefetch.cpp:55d57fcbc791 : 331 + 0x16]
05:59:35 INFO - eip = 0xb397e392 esp = 0xbfbea5f0 ebp = 0xbfbea6e8 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xad452400 edi = 0xbfbea63c
05:59:35 INFO - Found by: call frame info
05:59:35 INFO - 2 libxul.so!nsTimerImpl::Fire() [nsTimerImpl.cpp:55d57fcbc791 : 437 + 0x8]
05:59:35 INFO - eip = 0xb260850f esp = 0xbfbea6f0 ebp = 0xbfbea768 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xb397e5bc edi = 0xb098b620
05:59:35 INFO - Found by: call frame info
05:59:35 INFO - 3 libxul.so!nsTimerEvent::Run() [TimerThread.cpp:55d57fcbc791 : 267 + 0x11]
05:59:35 INFO - eip = 0xb26071f4 esp = 0xbfbea770 ebp = 0xbfbea7b8 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xa796c0d0 edi = 0xa796c0e4
05:59:35 INFO - Found by: call frame info
05:59:35 INFO - 4 libxul.so!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:55d57fcbc791 : 874 + 0x14]
05:59:35 INFO - eip = 0xb260027d esp = 0xbfbea7c0 ebp = 0xbfbea838 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xbfbea86f edi = 0xb08226c0
05:59:35 INFO - Found by: call frame info
05:59:35 INFO - 5 libxul.so!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:55d57fcbc791 : 277 + 0x10]
05:59:35 INFO - eip = 0xb262a041 esp = 0xbfbea840 ebp = 0xbfbea878 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xb081c390 edi = 0xbfbeaac0
05:59:35 INFO - Found by: call frame info
05:59:35 INFO - 6 libxul.so!mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [MessagePump.cpp:55d57fcbc791 : 95 + 0xc]
05:59:35 INFO - eip = 0xb28be5a0 esp = 0xbfbea880 ebp = 0xbfbea8c8 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xb081c390 edi = 0xbfbeaac0
05:59:35 INFO - Found by: call frame info
05:59:35 INFO - 7 libxul.so!MessageLoop::RunInternal() [message_loop.cc:55d57fcbc791 : 234 + 0x14]
05:59:35 INFO - eip = 0xb289da36 esp = 0xbfbea8d0 ebp = 0xbfbea8f8 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xbfbeaac0 edi = 0xb08226c0
05:59:35 INFO - Found by: call frame info
05:59:35 INFO - 8 libxul.so!MessageLoop::Run() [message_loop.cc:55d57fcbc791 : 227 + 0x8]
05:59:35 INFO - eip = 0xb289da5c esp = 0xbfbea900 ebp = 0xbfbea928 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xbfbeaac0 edi = 0xb08226c0
05:59:35 INFO - Found by: call frame info
05:59:35 INFO - 9 libxul.so!nsBaseAppShell::Run() [nsBaseAppShell.cpp:55d57fcbc791 : 156 + 0xe]
05:59:35 INFO - eip = 0xb3ee6913 esp = 0xbfbea930 ebp = 0xbfbea958 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xaa4d7e00 edi = 0xb08226c0
05:59:35 INFO - Found by: call frame info
05:59:35 INFO - 10 libxul.so!XRE_RunAppShell [nsEmbedFunctions.cpp:55d57fcbc791 : 785 + 0x9]
05:59:35 INFO - eip = 0xb46f4170 esp = 0xbfbea960 ebp = 0xbfbea998 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xbfbeaac0 edi = 0xb081c390
05:59:35 INFO - Found by: call frame info
05:59:35 INFO - 11 libxul.so!mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) [MessagePump.cpp:55d57fcbc791 : 259 + 0x5]
05:59:35 INFO - eip = 0xb28be714 esp = 0xbfbea9a0 ebp = 0xbfbea9c8 ebx = 0xb75a0200
05:59:35 INFO - esi = 0xbfbeaac0 edi = 0xb081c390
05:59:35 INFO - Found by: call frame info
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Updated•10 years ago
|
Component: General → Networking: DNS
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
This is the #8 intermittent orange over the past 3 days. It would be helpful to get this assigned.
Flags: needinfo?(jduell.mcbugs)
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Updated•10 years ago
|
Assignee: nobody → dd.mozilla
Comment 98•10 years ago
|
||
Given that nsHTMLDNSPrefetch.cpp calls InitNeckoChild (thus setting gNeckoChild to non-null), this looks like a shutdown race where the prefetch timer fires during shutdown after NeckoChild's destructor has run and gNeckoChild has been reset to null.
| Assignee | ||
Comment 99•10 years ago
|
||
So... this?
Assignee: dd.mozilla → jduell.mcbugs
Status: NEW → ASSIGNED
Flags: needinfo?(jduell.mcbugs)
Attachment #8701576 -
Flags: review?(josh)
Comment 100•10 years ago
|
||
Comment on attachment 8701576 [details] [diff] [review]
v1: null checks
Review of attachment 8701576 [details] [diff] [review]:
-----------------------------------------------------------------
Yep.
Attachment #8701576 -
Flags: review?(josh) → review+
| Comment hidden (Intermittent Failures Robot) |
Comment 102•10 years ago
|
||
| Assignee | ||
Comment 103•10 years ago
|
||
| Comment hidden (Intermittent Failures Robot) |
Comment 105•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 109•10 years ago
|
||
This affects Aurora45 as well. Can we please get an uplift request?
status-firefox45:
--- → affected
Flags: needinfo?(jduell.mcbugs)
| Assignee | ||
Comment 110•10 years ago
|
||
Comment on attachment 8701576 [details] [diff] [review]
v1: null checks
Approval Request Comment
[Feature/regressing bug #]: unknown: since early e10s (several years ago)
[User impact if declined]: crashes
[Describe test coverage new/current, TreeHerder]: I assume lots of tests exercise DNS prefetch. HTML parses uses it.
[Risks and why]: not risky: just added some null checks
[String/UUID change made/needed]: none.
Do we need this on beta too? I'm asking for it just in case--I would expect the crashes ought to be on beta too as this is an old codepath.
Flags: needinfo?(jduell.mcbugs)
Attachment #8701576 -
Flags: approval-mozilla-beta?
Attachment #8701576 -
Flags: approval-mozilla-aurora?
| Comment hidden (Intermittent Failures Robot) |
Comment 112•10 years ago
|
||
Comment on attachment 8701576 [details] [diff] [review]
v1: null checks
Unless this is associated with a top crasher/sec fix, I do not think it meets the bar for Beta44 as we have entered RC mode. Sorry!
Let's take it into Aurora45.
Attachment #8701576 -
Flags: approval-mozilla-beta?
Attachment #8701576 -
Flags: approval-mozilla-beta-
Attachment #8701576 -
Flags: approval-mozilla-aurora?
Attachment #8701576 -
Flags: approval-mozilla-aurora+
status-firefox44:
--- → wontfix
| Reporter | ||
Comment 113•10 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•