Bug 1203430 - Intermittent crash in PNeckoChild::SendHTMLDNSPrefetch. r=jdm, a=ritu

--HG--
extra : source : 834a195f712043361ccbf9f72c1e14e901769720